--- a/src/MergeImage/MergeImage.csproj
+++ b/src/MergeImage/MergeImage.csproj
@@ -55,6 +55,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="files\plus-medium.png" />
+    <Content Include="files\plus-small.png" />
+    <Content Include="files\plus-super-small.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
